updated login signup

--- a/signup.html
+++ b/signup.html
@@ -43,11 +43,11 @@
                   </div>
 
                   <div class="form-outline mb-4">
-                    <input type="password" name="password" id="form3Example4cg" class="form-control form-control-lg" />
+                    <input type="password" name="pwd" id="form3Example4cg" class="form-control form-control-lg" />
                     <label class="form-label" for="form3Example4cg">Password</label>
                   </div>
                   <div class="form-outline mb-4">
-                    <input type="password" name="password_confirmation" id="form3Example4cg" class="form-control form-control-lg" />
+                    <input type="password" name="confirm_pwd" id="form3Example4cg" class="form-control form-control-lg" />
                     <label class="form-label" for="form3Example4cg">Confirm Password</label>
                   </div>
 
